# srai-telegrambot

./: .gitignore  LICENSE.txt  README.md  deployment.json  dockerfile  pyproject.toml  requirements.txt  setup.cfg  setup.py
app/: main.py
srai_telegrambot/: __init__.py  dao_telegram_bot.py  telegram_bot.py  telegram_bot_interface.py  telegram_bot_test.py
srai_telegrambot/command/: command_base.py  command_chat_id.py  command_help.py  command_image_tag.py
srai_telegrambot/mode/: text_mode_base.py  text_mode_default.py  text_mode_gpt.py  text_mode_rag.py  voice_mode_base.py  voice_mode_gpt.py
srai_telegrambot/model/: chat_message.py
test/: text_mode_gpt_test.py  text_mode_rag_pancan.py  text_mode_rag_test.py
test/data/vectorstore/: index.faiss  index.pkl
